--- a/index.html
+++ b/index.html
@@ -305,8 +305,8 @@
                     Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
                   </div>
                   <div class="prices">
-                    <div class="price">VNĐ <span>250.000</span></div>
-                    <div class="old-price">VNĐ 500.000</div>
+                    <div class="price contact">Giá:<span>Liên hệ</span></div>
+                    
                   </div>
                 </div>
               </div>
