--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                 <img src="./img/item1.png" alt="" />
                 <div class="info">
                   <div class="name">
-                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                     (3 loại sử dụng dụng
                   </div>
                   <div class="prices">
                     <div class="price">VNĐ <span>250.000</span></div>
@@ -338,7 +338,7 @@
                 <img src="./img/item1.png" alt="" />
                 <div class="info">
                   <div class="name">
-                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                     (3 loại sử dụng dụng
                   </div>
                   <div class="prices">
                     <div class="price">VNĐ <span>250.000</span></div>
@@ -350,7 +350,7 @@
                 <img src="./img/item1.png" alt="" />
                 <div class="info">
                   <div class="name">
-                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                     (3 loại sử dụng dụng
                   </div>
                   <div class="prices">
                     <div class="price">VNĐ <span>250.000</span></div>
@@ -362,7 +362,7 @@
                 <img src="./img/item1.png" alt="" />
                 <div class="info">
                   <div class="name">
-                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                     (3 loại sử dụng dụng
                   </div>
                   <div class="prices">
                     <div class="price">VNĐ <span>250.000</span></div>
@@ -374,7 +374,7 @@
                 <img src="./img/item1.png" alt="" />
                 <div class="info">
                   <div class="name">
-                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                     (3 loại sử dụng dụng
                   </div>
                   <div class="prices">
                     <div class="price">VNĐ <span>250.000</span></div>
@@ -386,7 +386,7 @@
                 <img src="./img/item1.png" alt="" />
                 <div class="info">
                   <div class="name">
-                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                     (3 loại sử dụng dụng
                   </div>
                   <div class="prices">
                     <div class="price">VNĐ <span>250.000</span></div>
@@ -398,7 +398,7 @@
                 <img src="./img/item1.png" alt="" />
                 <div class="info">
                   <div class="name">
-                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                     (3 loại sử dụng dụng
                   </div>
                   <div class="prices">
                     <div class="price">VNĐ <span>250.000</span></div>
@@ -410,7 +410,7 @@
                 <img src="./img/item1.png" alt="" />
                 <div class="info">
                   <div class="name">
-                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                     (3 loại sử dụng dụng
                   </div>
                   <div class="prices">
                     <div class="price">VNĐ <span>250.000</span></div>
@@ -433,7 +433,7 @@
                 <img src="./img/item1.png" alt="" />
                 <div class="info">
                   <div class="name">
-                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                     (3 loại sử dụng dụng
                   </div>
                   <div class="prices">
                     <div class="price">VNĐ <span>250.000</span></div>
@@ -442,6 +442,7 @@
                 </div>
               </div>
               <div class="item">
+                <div class="sale">-10%</div>
                 <img src="./img/item1.png" alt="" />
                 <div class="info">
                   <div class="name">
@@ -454,6 +455,7 @@
                 </div>
               </div>
               <div class="item">
+                <div class="sale">-10%</div>
                 <img src="./img/item1.png" alt="" />
                 <div class="info">
                   <div class="name">
@@ -466,6 +468,7 @@
                 </div>
               </div>
               <div class="item">
+                <div class="sale">-10%</div>
                 <img src="./img/item1.png" alt="" />
                 <div class="info">
                   <div class="name">
@@ -478,6 +481,7 @@
                 </div>
               </div>
               <div class="item">
+                <div class="sale">-10%</div>
                 <img src="./img/item1.png" alt="" />
                 <div class="info">
                   <div class="name">
@@ -490,6 +494,7 @@
                 </div>
               </div>
               <div class="item">
+                <div class="sale">-10%</div>
                 <img src="./img/item1.png" alt="" />
                 <div class="info">
                   <div class="name">
