--- a/index.html
+++ b/index.html
@@ -1016,7 +1016,7 @@
               <img src="./img/logo-ref3.png" alt="" />
               <img src="./img/ft-vcci.png" alt="" />
             </div>
-            <div class="d-flex align-items-center">
+            <div class="d-flex align-items-center" style="gap: 10px;">
               <img src="./img/logo2.png" alt="" />
               <p class="footer-text">
                 Dự án Phát triển bền vững và toàn diện chuỗi giá trị nghêu và
@@ -1070,7 +1070,7 @@
                 <p class="text">Lượt truy cập</p>
                 <p class="text number">7398898</p>
               </div>
-              <img src="./img/dangky.png" alt="" />
+              <img src="./img/dangky.svg" alt="" />
             </div>
           </div>
         </div>
