--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <img src="./img/bbl.png" alt="" />
         </div>
         <div class="bamboo-right">
-          <img src="./img/bbr.png" class="bamboo-right-img" alt="" />
+          <img src="./img/bbr.svg" class="bamboo-right-img" alt="" />
           <img src="./img/bbrec.png" class="bamboo-right-rec" alt="" />
         </div>
       </div>
