--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
               <img src="./img/ft-vcci.png" alt="" />
             </div>
             <div class="d-flex align-items-center" style="gap: 10px;">
-              <img src="./img/logo2.png" alt="" />
+              <img src="./img/logo2.png" class="logo-2" alt="" />
               <p class="footer-text">
                 Dự án Phát triển bền vững và toàn diện chuỗi giá trị nghêu và
                 tre tại Việt Nam
@@ -1070,7 +1070,7 @@
                 <p class="text">Lượt truy cập</p>
                 <p class="text number">7398898</p>
               </div>
-              <img src="./img/dangky.svg" alt="" />
+              <img src="./img/dangky.svg" alt="" class="dangky-img"/>
             </div>
           </div>
         </div>
