--- a/index.html
+++ b/index.html
@@ -343,6 +343,30 @@
               <div class="item ">
                 <img src="./img/item1.png" alt="" />
                 <div class="info">
+                  <div class="name">
+                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                  </div>
+                  <div class="prices">
+                    <div class="price">VNĐ <span>250.000</span></div>
+                    <div class="old-price">VNĐ 500.000</div>
+                  </div>
+                </div>
+              </div>
+              <div class="item ">
+                <img src="./img/item1.png" alt="" />
+                <div class="info">
+                  <div class="name">
+                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                  </div>
+                  <div class="prices">
+                    <div class="price">VNĐ <span>250.000</span></div>
+                    <div class="old-price">VNĐ 500.000</div>
+                  </div>
+                </div>
+              </div>
+              <div class="item ">
+                <img src="./img/item1.png" alt="" />
+                <div class="info">
                   <div class="name">(3 loại sử dụng dụng</div>
                   <div class="prices">
                     <div class="price">VNĐ <span>250.000</span></div>
@@ -431,6 +455,30 @@
               </a>
             </div>
             <div class="list ">
+              <div class="item ">
+                <img src="./img/item1.png" alt="" />
+                <div class="info">
+                  <div class="name">
+                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                  </div>
+                  <div class="prices">
+                    <div class="price">VNĐ <span>250.000</span></div>
+                    <div class="old-price">VNĐ 500.000</div>
+                  </div>
+                </div>
+              </div>
+              <div class="item ">
+                <img src="./img/item1.png" alt="" />
+                <div class="info">
+                  <div class="name">
+                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                  </div>
+                  <div class="prices">
+                    <div class="price">VNĐ <span>250.000</span></div>
+                    <div class="old-price">VNĐ 500.000</div>
+                  </div>
+                </div>
+              </div>
               <div class="item ">
                 <img src="./img/item1.png" alt="" />
                 <div class="info">
@@ -686,6 +734,30 @@
                   </div>
                 </div>
               </div>
+              <div class="item ">
+                <img src="./img/item1.png" alt="" />
+                <div class="info">
+                  <div class="name">
+                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                  </div>
+                  <div class="prices">
+                    <div class="price">VNĐ <span>250.000</span></div>
+                    <div class="old-price">VNĐ 500.000</div>
+                  </div>
+                </div>
+              </div>
+              <div class="item ">
+                <img src="./img/item1.png" alt="" />
+                <div class="info">
+                  <div class="name">
+                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                  </div>
+                  <div class="prices">
+                    <div class="price">VNĐ <span>250.000</span></div>
+                    <div class="old-price">VNĐ 500.000</div>
+                  </div>
+                </div>
+              </div>
             </div>
           </section>
           <section>
@@ -817,6 +889,30 @@
                   </div>
                 </div>
               </div>
+              <div class="item ">
+                <img src="./img/item1.png" alt="" />
+                <div class="info">
+                  <div class="name">
+                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                  </div>
+                  <div class="prices">
+                    <div class="price">VNĐ <span>250.000</span></div>
+                    <div class="old-price">VNĐ 500.000</div>
+                  </div>
+                </div>
+              </div>
+              <div class="item ">
+                <img src="./img/item1.png" alt="" />
+                <div class="info">
+                  <div class="name">
+                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                  </div>
+                  <div class="prices">
+                    <div class="price">VNĐ <span>250.000</span></div>
+                    <div class="old-price">VNĐ 500.000</div>
+                  </div>
+                </div>
+              </div>
             </div>
           </section>
           <section>
@@ -828,6 +924,30 @@
               </a>
             </div>
             <div class="list ">
+              <div class="item ">
+                <img src="./img/item1.png" alt="" />
+                <div class="info">
+                  <div class="name">
+                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                  </div>
+                  <div class="prices">
+                    <div class="price">VNĐ <span>250.000</span></div>
+                    <div class="old-price">VNĐ 500.000</div>
+                  </div>
+                </div>
+              </div>
+              <div class="item ">
+                <img src="./img/item1.png" alt="" />
+                <div class="info">
+                  <div class="name">
+                    Tre đan lát tiện dụng dùng cho nội thất (3 loại sử dụng dụng
+                  </div>
+                  <div class="prices">
+                    <div class="price">VNĐ <span>250.000</span></div>
+                    <div class="old-price">VNĐ 500.000</div>
+                  </div>
+                </div>
+              </div>
               <div class="item ">
                 <img src="./img/item1.png" alt="" />
                 <div class="info">
