--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <body>
     <div class="wrapper">
       <div class="pre-header">
-        <div class="container">
+        <div class="container-al">
           <div class="pre-header-contact">
             <p class="text">Sàn thương mại điện tử các sản phẩm từ tre</p>
             <p class="text">
@@ -56,7 +56,7 @@
         </div>
       </div>
       <header class="header">
-        <div class="container">
+        <div class="container-al">
           <div class="logo">
             <img src="./img/logo-full.png" alt="" />
           </div>
@@ -80,7 +80,7 @@
         </div>
       </header>
       <div class="categories">
-        <div class="container">
+        <div class="container-al">
           <ul>
             <li>Trang chủ</li>
             <li class="dropdown">
@@ -114,12 +114,12 @@
         </div>
       </div>
       <div class="mobile-cate-btn">
-        <div class="container">
+        <div class="container-al">
           <i class="fa-solid fa-bars"></i>
         </div>
       </div>
       <div class="mobile-categories">
-        <div class="container">
+        <div class="container-al">
           <ul>
             <li>Trang chủ</li>
             <li class="dropdown">
@@ -153,7 +153,7 @@
         </div>
       </div>
       <div class="content">
-        <div class="container">
+        <div class="container-al">
           <section>
             <div class="section-title">
               <h1>Xu hướng tìm kiếm</h1>
@@ -166,7 +166,7 @@
                 </div>
               </div>
             </div>
-            <!-- Slider main container -->
+            <!-- Slider main container-al -->
             <div class="slider">
               <div class="item first">
                 <img src="./img/item2.png" alt="" />
@@ -1073,7 +1073,7 @@
         </div>
       </div>
       <div class="top-product">
-        <div class="container">
+        <div class="container-al">
           <div class="top-product-head">
             <div class="top-product-title">
               <img src="./img/top-product.svg" alt="" />
@@ -1121,7 +1121,7 @@
       </div>
 
       <footer class="footer">
-        <div class="container">
+        <div class="container-al">
           <div class="left flex-column d-flex">
             <div class="logo-list ">
               <img src="./img/logo-ref1.png" alt="" />
